Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8237642 | 8u261 | Kevin Rushforth | P3 | Resolved | Fixed | b01 |
JDK-8247267 | jfx11.0.8 | Johan Vos | P3 | Resolved | Fixed |
When building on MacOSX10.15, there is an issue since the protocol for objc_msgSend is changed:
../../platform/osx/avf/AVFAudioProcessor.mm:111:21: error: no matching function for call to 'objc_msgSend'
objc_msgSend(audioMixInputParameters,
^~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/usr/include/objc/message.h:63:1: note: candidate function not viable: requires 0 arguments, but 3 were provided
objc_msgSend(void /* id self, SEL op, ... */ )
../../platform/osx/avf/AVFAudioProcessor.mm:111:21: error: no matching function for call to 'objc_msgSend'
objc_msgSend(audioMixInputParameters,
^~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/usr/include/objc/message.h:63:1: note: candidate function not viable: requires 0 arguments, but 3 were provided
objc_msgSend(void /* id self, SEL op, ... */ )
- backported by
-
JDK-8237642 [macOS] Media build broken on XCode 11
-
- Resolved
-
-
JDK-8247267 [macOS] Media build broken on XCode 11
-
- Resolved
-