8237078: [macOS] Media build broken on XCode 11

Reviewed-by: kcr, almatvee